# ibis

./: .travis.yml  Cargo.toml  Readme.md  appveyor.yml  repo.json  repo.min.json  schema.json  schema.min.json
.github/: dependabot.yml
base/: Cargo.toml
base/src/: cache.rs  constants.rs  lib.rs  packages.rs  schema.rs  store.rs  validators.rs
base/src/store/: schema.rs
base/src/validators/: validator.rs
cli/: Cargo.toml  docubus.json  schema.json
cli/src/: main.rs  package.rs  validate.rs
cli/src/package/: get_url.rs  validate.rs
schema/: compile.ts  package-lock.json  package.json  repo.ts  schema.json  schema.ts
src/: main.rs
