[package]
name = "base"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["macros"] }
anyhow = "1.0.31"
reqwest = "0.10.6"
valico = "2"
dirs = "2.0.2"