[package]
name = "base"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "1.8.1", features = ["macros", "fs"] }
anyhow = "1.0.31"
reqwest = "0.10.6"
valico = "3"
dirs = "3.0.1"
async-trait = "0.1.35"
thiserror = "1.0.19"
colored = "2.0.0"
git2 = "0.13.6"

[dev-dependencies]
tempfile="3.1.0"
