[package]
name = "cli"
version = "0.1.0"
authors = ["sam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = "3.0.0-beta.1"
colored = "2.0"
valico = "2"
reqwest = "0.10.7"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros"] }
anyhow = "1.0.42"
base = { path = "../base" }